tests/sksl/errors/OverflowParamArraySize.dsl.glsl
### Compilation failed:

error: arrays are not yet fully supported
error: expected ')', but found '4294967296'
2 errors
